redis.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: redis
spec:
    serviceName: redis-svc
    replicas: 1
    selector:
        matchLabels:
            app: redis
    template:
        metadata:
            labels:
                app: redis
        spec:
            containers:
            - name: redis
              image: bitnami/redis:latest
              ports:
              - containerPort: 6379
                name: redis-port
              volumeMounts:
              - name: data
                mountPath: /bitnami/redis/data
    volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
            requests:
                storage: 5Gi
