new-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  labels:
    name: frontend-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: frontend-svc
            port: 
              number: 3000
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: static-svc
            port: 
              number: 80
